# crosshair-app

./: .gitignore  README.md
project/: CMakeLists.txt
project/app/: CMakeLists.txt
project/app/src/: main.cpp
